[package]
name = "alloy-revm"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.5.4", features = ["rpc", "json-rpc", "transports", "providers", "node-bindings"] }
eyre = "0.6.12"
revm = "17.1.0"
serde = "1.0.213"
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["rt-multi-thread"] }
tower = "0.5.1"
